[gd_scene load_steps=2 format=3 uid="uid://k73cu3a114u3"]

[ext_resource type="Script" uid="uid://vk721uu3emup" path="res://inventory_item.gd" id="1_iu6pg"]

[node name="inventory_item" type="VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 150.0
offset_bottom = 94.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_iu6pg")

[node name="icon" type="TextureRect" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
stretch_mode = 3

[node name="button" type="Button" parent="icon"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="display_name" type="RichTextLabel" parent="."]
clip_contents = false
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
bbcode_enabled = true
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="icon/button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="icon/button" to="." method="_on_button_button_up"]
